Add multi click for list adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,2 +1,5 @@
 <resources>
+    <string name="rename">重命名</string>
+    <string name="addToFavorite">收藏</string>
+    <string name="detail">详情</string>
 </resources>
