--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="fileNotExist">文件不存在</string>
     <string name="nonePermission">没有访问权限</string>
     <string name="requestFail">请求失败</string>
+    <string name="createSheet">创建歌单</string>
 </resources>
