--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="nonePermission">没有访问权限</string>
     <string name="requestFail">请求失败</string>
     <string name="createSheet">创建歌单</string>
+    <string name="sure">确定</string>
+    <string name="cancel">取消</string>
 </resources>
