--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="createSheet">创建歌单</string>
     <string name="sure">确定</string>
     <string name="cancel">取消</string>
+    <string name="createSucceed">创建成功</string>
 </resources>
