--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sure">确定</string>
     <string name="cancel">取消</string>
     <string name="createSucceed">创建成功</string>
+    <string name="mediaSheet">歌单</string>
 </resources>
