--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="createSucceed">创建成功</string>
     <string name="mediaSheet">歌单</string>
     <string name="search">搜索</string>
+    <string name="pathInvalid">路径不合法</string>
+    <string name="operating">操作正在进行中</string>
 </resources>
