--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="rename">重命名</string>
+    <string name="reboot">重启</string>
     <string name="addToFavorite">收藏</string>
     <string name="detail">详情</string>
     <string name="notOnline">设备未在线</string>
@@ -14,4 +15,6 @@
     <string name="search">搜索</string>
     <string name="pathInvalid">路径不合法</string>
     <string name="operating">操作正在进行中</string>
+    <string name="alreadyArrivedRoot">已经是根目录了</string>
+    <string name="rebooting">重启中……</string>
 </resources>
