Add cloud music download and play

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,10 @@
     <string name="createSucceed">创建成功</string>
     <string name="mediaSheet">歌单</string>
     <string name="search">搜索</string>
+    <string name="filter">过滤</string>
     <string name="pathInvalid">路径不合法</string>
     <string name="operating">操作正在进行中</string>
     <string name="alreadyArrivedRoot">已经是根目录了</string>
     <string name="rebooting">重启中……</string>
+    <string name="all">全部</string>
 </resources>
