--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,7 @@
     <string name="md5">MD5</string>
     <string name="file">文件</string>
     <string name="upload">上传</string>
+    <string name="paste">粘贴</string>
+    <string name="items">(%1$d)个</string>
+    <string name="deleteSure">确认删除 %1$s 吗?</string>
 </resources>
