--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,8 @@
     <string name="paste">粘贴</string>
     <string name="items">(%1$d)个</string>
     <string name="deleteSure">确认删除 %1$s 吗?</string>
+    <string name="sampleRate">采样率</string>
+    <string name="duration">时长</string>
+    <string name="channel">通道</string>
+    <string name="open">打开</string>
 </resources>
