--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,7 @@
     <string name="duration">时长</string>
     <string name="channel">通道</string>
     <string name="open">打开</string>
+    <string name="artist">艺术家</string>
+    <string name="album">专辑</string>
+    <string name="add">添加</string>
 </resources>
