--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="listEmpty">列表为空</string>
     <string name="playing">正在播放</string>
     <string name="setNext">设置下一个</string>
+    <string name="playAll">播放所有</string>
 </resources>
