--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="playing">正在播放</string>
     <string name="setNext">设置下一个</string>
     <string name="playAll">播放所有</string>
+    <string name="local">本地</string>
 </resources>
