--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="available">剩余</string>
     <string name="used">使用</string>
     <string name="capacity">容量</string>
+    <string name="account">账号</string>
 </resources>
