--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="used">使用</string>
     <string name="capacity">容量</string>
     <string name="account">账号</string>
+    <string name="outOfBounds">超出范围</string>
 </resources>
