--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="noneServerExist">没有可使用的服务器</string>
     <string name="chooseServer">选择服务器</string>
     <string name="invalidServer">不合法的服务器</string>
+    <string name="transportList">传输器</string>
 </resources>
