--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,5 @@
     <string name="remove">移除</string>
     <string name="pause">暂停</string>
     <string name="conflict">处理冲突</string>
+    <string name="love">Dear</string>
 </resources>
