--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="noneSupportOpenFileType">暂时不支持打开此类型文件</string>
     <string name="fileBrowser">文件浏览器</string>
     <string name="fileTransport">文件传输</string>
+    <string name="conveyor">文件传输</string>
     <string name="all">全部</string>
     <string name="sheet">歌单</string>
     <string name="favorite">收藏</string>
