--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,6 @@
     <string name="conveying">传输中</string>
     <string name="exception">异常</string>
     <string name="networkException">网络异常</string>
+    <string name="speed">速度</string>
+    <string name="status">状态</string>
 </resources>
