--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,6 @@
     <string name="networkException">网络异常</string>
     <string name="speed">速度</string>
     <string name="status">状态</string>
+    <string name="date">日期</string>
+    <string name="time">时间</string>
 </resources>
