--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,5 @@
     <string name="status">状态</string>
     <string name="date">日期</string>
     <string name="time">时间</string>
+    <string name="loading">加载中</string>
 </resources>
