Finish file download function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,5 @@
     <string name="time">时间</string>
     <string name="loading">加载中</string>
     <string name="alreadyMax">已经最大值了</string>
+    <string name="canNotSwitch">不能切换</string>
 </resources>
