--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,6 @@
     <string name="loading">加载中</string>
     <string name="alreadyMax">已经最大值了</string>
     <string name="canNotSwitch">不能切换</string>
+    <string name="canNotOperateHere">当前位置不能执行此操作</string>
+    <string name="targetFolderInvalid">目标目录不合法</string>
 </resources>
