--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="canNotOperateHere">当前位置不能执行此操作</string>
     <string name="targetFolderInvalid">目标目录不合法</string>
     <string name="noneDataToOperate">没有可操作的数据</string>
+    <string name="goTo">前往</string>
 </resources>
