--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,4 +138,5 @@
     <string name="exit">退出</string>
     <string name="serverUnConnect">服务未连接,请稍后重试</string>
     <string name="personalWebsite">网站</string>
+    <string name="cover">覆盖</string>
 </resources>
