--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,9 @@
     <string name="currentModeNotSupport">当前模式不能执行此操作</string>
     <string name="exit">退出</string>
     <string name="serverUnConnect">服务未连接,请稍后重试</string>
-    <string name="personalWebsite">网站</string>
     <string name="cover">覆盖</string>
+    <string name="gallery">相册</string>
+
+    <!---->
+    <string name="personalWebsite">网站</string>
 </resources>
