Fix download breakpoint bugs

--- a/FileManager/src/main/res/values/strings.xml
+++ b/FileManager/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="fileTransport">文件传输</string>
     <string name="conveyor">文件传输</string>
     <string name="all">全部</string>
+    <string name="alreadyWhat">已经%1s</string>
     <string name="sheet">歌单</string>
     <string name="favorite">收藏</string>
     <string name="delete">删除</string>
