Fix nas file upload bugs

--- a/FileManager/src/main/res/values/strings.xml
+++ b/FileManager/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="conveyor">文件传输</string>
     <string name="all">全部</string>
     <string name="alreadyWhat">已经%1s</string>
+    <string name="whatFail">%1s失败</string>
     <string name="sheet">歌单</string>
     <string name="favorite">收藏</string>
     <string name="delete">删除</string>
